--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "hamburger-react": "^2.5.0",
     "next": "13.3.4",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
   }
