--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-carousel-slider-component": "^1.0.10",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
   }
 }
