--- a/public/icons/manifest.json
+++ b/public/icons/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "JGFunded",
+    "description": "A marketplace where vetted and verified StartUps and Investors meet, and funding is initiated",
     "icons": [
         {
             "src": "\/icons/android-icon-36x36.png",
