--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.17",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "hamburger-react": "^2.5.0",
