--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "hamburger-react": "^2.5.0",
+    "moment": "^2.29.4",
     "next": "13.3.4",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.23",
