--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
@@ -24,6 +25,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-apexcharts": "^1.4.1",
     "react-calendly": "^1.1.3",
     "react-carousel-slider-component": "^1.0.10",
     "react-dom": "18.2.0",
