--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-maps": "^3.0.0",
     "tailwindcss": "3.3.2"
   }
 }
