--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-simple-maps": "^3.0.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "yup": "^1.2.0"
   }
